Rename topicsConfig to topics in KafkaInTransport constructors